# aye

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
aye/: __init__.py  cli.py  config.py  detectors.py  doctor.py  updater.py  wrapper.py
consent_pilot/: __init__.py  cli.py  detectors.py
docs/: config.md
scripts/: aye_entry.py  build.py  consent_pilot_entry.py
tests/: test_cli.py  test_config.py  test_detectors.py  test_e2e.py  test_updater.py  test_wrapper.py
